[package]
name = "better-rune-derive"
version = "0.14.0"
authors = ["John-John Tedro <udoprog@tedro.se>", "atampy25"]
edition = "2021"
rust-version = "1.81"
description = "Macros for the Rune Language, an embeddable dynamic programming language for Rust. Edited to introduce a few more features."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/rune-rs/rune"
repository = "https://github.com/rune-rs/rune"
license = "MIT OR Apache-2.0"
keywords = ["language", "scripting", "scripting-language"]
categories = ["parser-implementations"]

[dependencies]
rune-core = { git = "https://github.com/rune-rs/rune", rev = "a8c4f97", features = ["std"] }
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"
proc-macro2 = "1.0.56"

[lib]
proc-macro = true

[dev-dependencies]
rune = { git = "https://github.com/rune-rs/rune", rev = "a8c4f97" }
rune-core = { git = "https://github.com/rune-rs/rune", rev = "a8c4f97" }
